[package]
name = "bees-prometheus-exporter"
description = "Prometheus exporter for the bees deduplication daemon"
version = "0.1.0"
edition = "2024"
authors = ["Jannik Glückert"]
license-file = "LICENSE.txt"
readme = "README.md"

[profile.release]
lto = "thin"
opt-level = 3
strip = "debuginfo"

[dependencies]
regex = { version = "1.11", features = [
  "std",
  "perf",
], default-features = false }
prometheus-client = "0.24.0"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
glob = "0.3"
uuid = "1.18.1"
axum = { version = "0.8.4", features = [
  "http1",
  "tokio",
], default-features = false }
log4rs = { version = "1.4.0", features = [
  "console_appender",
], default-features = false }
landlock = "0.4.3"
