[package]
authors = ["Jannik Glückert"]
description = "Prometheus exporter for the bees deduplication daemon"
edition = "2024"
license = "GPL-3.0-or-later"
name = "bees-prometheus-exporter"
readme = "README.md"
version = "0.1.1"

[profile.release]
lto = "thin"
opt-level = 3
strip = "debuginfo"

[dependencies]
anyhow = "1.0"
axum = { default-features = false, features = ["http1", "tokio"], version = "0.8.4" }
clap = { features = ["derive"], version = "4.5" }
glob = "0.3"
landlock = "0.4.3"
log = "0.4"
log4rs = { default-features = false, features = ["console_appender"], version = "1.4.0" }
prometheus-client = "0.24.0"
regex = { default-features = false, features = ["perf", "std"], version = "1.11" }
tokio = { features = ["full"], version = "1.47" }
uuid = "1.18.1"
