[project]
name = "bees-prometheus-exporter"
version = "0.1.0"
description = "Prometheus exporter for the bees deduplication daemon"
authors = [{ name = "Jannik Glückert" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["prometheus-client"]
license.file = "LICENSE.txt"

[project.scripts]
bees-prometheus-exporter = "bees_prometheus_exporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["black", "isort", "mypy"]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
